# ToDoApp

./: CMakeLists.txt  addwindow.cpp  addwindow.h  addwindow.ui  calendarwindow.cpp  calendarwindow.h  calendarwindow.ui  deletewindow.cpp  deletewindow.h  deletewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  staticticsinfo.cpp  staticticsinfo.h  staticticsinfo.ui  tasknotification.cpp  tasknotification.h  tasknotification.ui  taskswindow.cpp  taskswindow.h  taskswindow.ui
